# LIB-ERROR

./: CMakeLists.txt
Include/Adder/: Adder.h
lib/: Adder.cpp  CMakeLists.txt
src/: main.cpp
